- ball move automatically and player choose only direction - ball base speed can be set in the config json and in game depend of the score

--- a/BASE_OPEN_GL_2022/CONFIGURATION_JEU.json
+++ b/BASE_OPEN_GL_2022/CONFIGURATION_JEU.json
@@ -1,4 +1,5 @@
 {
-  "TailleCarteX" : 100,
-  "TailleCarteY" : 100
+  "TailleCarteX": 100,
+  "TailleCarteY": 100,
+  "IntervalDeplacementPersonnage": 200
 }
