--- a/BASE_OPEN_GL_2022/BASE_OPEN_GL_2022.csproj
+++ b/BASE_OPEN_GL_2022/BASE_OPEN_GL_2022.csproj
@@ -82,6 +82,7 @@
     <Compile Include="C_CONFIGURATION_JEU.cs" />
     <Compile Include="C_CONSOMMABLE.cs" />
     <Compile Include="C_DECOR.cs" />
+    <Compile Include="C_DIRECTION_BALLE.cs" />
     <Compile Include="C_MONDE.cs" />
     <Compile Include="C_MUR.cs" />
     <Compile Include="C_OBJETS_GRAPHIQUES.cs" />
